Bug 636093: Remove assertion that's no longer asserting what it was intended to. r=roc a=a